--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - name: checkout code
         uses: actions/checkout@3
 
-      - name: setup python
+      - name: Setup python
         uses: actions/setup-python@4
         with:
           python-version: '3.10'
