--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,22 +11,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: checkout code
-        uses: actions/checkout@3
+    - name: checkout code
+      uses: actions/checkout@3
 
-      - name: Setup python
-        uses: actions/setup-python@4
-        with:
-          python-version: '3.10'
+    - name: Setup python
+      uses: actions/setup-python@4
+      with:
+        python-version: '3.10'
 
-      - name: install depedencies
-        run: |
-          pip install pytest
+    - name: install depedencies
+      run: |
+        pip install pytest
           
-      -name: execute the test script
-       run:|
-         python -m unittest test_calculator.py
-         
+    -name: execute the test script
+     run: |
+       pythom -m unittest test_calculator.py
+       
         
       
 
