--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,4 @@ jobs:
           
     - name: execute the test script
      run: |
-       pythom -m unittest test_calculator.py
+       pythom -m unittest test-calculator.py
